byoc/infra/sagemaker-vpc-6azs.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Amazon SageMaker Sample VPC - Private and Public subnets'

Parameters:

  VpcBlock:
    Type: String
    Default: 10.0.0.0/16
    Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.

  PublicSubnet01Block:
    Type: String
    Default: 10.0.0.0/20
    Description: CidrBlock for public subnet 01 within the VPC

  PublicSubnet02Block:
    Type: String
    Default: 10.0.16.0/20
    Description: CidrBlock for public subnet 02 within the VPC

  PublicSubnet03Block:
    Type: String
    Default: 10.0.32.0/20
    Description: CidrBlock for public subnet 03 within the VPC

  PublicSubnet04Block:
    Type: String
    Default: 10.0.48.0/20
    Description: CidrBlock for public subnet 04 within the VPC

  PublicSubnet05Block:
    Type: String
    Default: 10.0.64.0/20
    Description: CidrBlock for public subnet 05 within the VPC

  PublicSubnet06Block:
    Type: String
    Default: 10.0.80.0/20
    Description: CidrBlock for public subnet 06 within the VPC

  PrivateSubnet01Block:
    Type: String
    Default: 10.0.128.0/20
    Description: CidrBlock for private subnet 01 within the VPC

  PrivateSubnet02Block:
    Type: String
    Default: 10.0.144.0/20
    Description: CidrBlock for private subnet 02 within the VPC

  PrivateSubnet03Block:
    Type: String
    Default: 10.0.160.0/20
    Description: CidrBlock for private subnet 03 within the VPC

  PrivateSubnet04Block:
    Type: String
    Default: 10.0.176.0/20
    Description: CidrBlock for private subnet 04 within the VPC

  PrivateSubnet05Block:
    Type: String
    Default: 10.0.192.0/20
    Description: CidrBlock for private subnet 05 within the VPC

  PrivateSubnet06Block:
    Type: String
    Default: 10.0.208.0/20
    Description: CidrBlock for private subnet 06 within the VPC

  NamePrefix:
    Type: String
    Default: SageMaker
    Description: Resource name prefix for all

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "VPC Network Configuration"
        Parameters:
          - VpcBlock
          - PublicSubnet01Block
          - PublicSubnet02Block
          - PublicSubnet03Block
          - PublicSubnet04Block
          - PublicSubnet05Block
          - PublicSubnet06Block
          - PrivateSubnet01Block
          - PrivateSubnet02Block
          - PrivateSubnet03Block
          - PrivateSubnet04Block
          - PrivateSubnet05Block
          - PrivateSubnet06Block          
          - NamePrefix

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:  !Ref VpcBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-VPC'

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public Subnets
      - Key: Network
        Value: Public

  PrivateRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ1
      - Key: Network
        Value: Private01

  PrivateRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ2
      - Key: Network
        Value: Private02

  PrivateRouteTable03:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ3
      - Key: Network
        Value: Private03

  PrivateRouteTable04:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ4
      - Key: Network
        Value: Private04

  PrivateRouteTable05:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ5
      - Key: Network
        Value: Private05

  PrivateRouteTable06:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ6
      - Key: Network
        Value: Private06

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute01:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway01
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  PrivateRoute02:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway02
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  PrivateRoute03:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway03
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable03
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway03

  PrivateRoute04:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway04
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable04
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway04

  PrivateRoute05:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway05
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable05
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway05

  PrivateRoute06:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway06
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable06
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway06

  NatGatewayEIP1:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP2:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP3:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP4:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP5:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP6:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGateway01:
    DependsOn:
    - NatGatewayEIP1
    - PublicSubnet01
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP1.AllocationId'
      SubnetId: !Ref PublicSubnet01
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ1'

  NatGateway02:
    DependsOn:
    - NatGatewayEIP2
    - PublicSubnet02
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP2.AllocationId'
      SubnetId: !Ref PublicSubnet02
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ2'

  NatGateway03:
    DependsOn:
    - NatGatewayEIP3
    - PublicSubnet03
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP3.AllocationId'
      SubnetId: !Ref PublicSubnet03
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ3'

  NatGateway04:
    DependsOn:
    - NatGatewayEIP4
    - PublicSubnet04
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP4.AllocationId'
      SubnetId: !Ref PublicSubnet04
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ4'

  NatGateway05:
    DependsOn:
    - NatGatewayEIP5
    - PublicSubnet05
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP5.AllocationId'
      SubnetId: !Ref PublicSubnet05
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ5'

  NatGateway06:
    DependsOn:
    - NatGatewayEIP6
    - PublicSubnet06
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP6.AllocationId'
      SubnetId: !Ref PublicSubnet06
      Tags:
      - Key: Name
        Value: !Sub '${NamePrefix}-NatGatewayAZ6'

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 01
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet01"
      - Key: kubernetes.io/role/elb
        Value: 1

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 02
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet02Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet02"
      - Key: kubernetes.io/role/elb
        Value: 1

  PublicSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 03
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet03Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet03"
      - Key: kubernetes.io/role/elb
        Value: 1

  PublicSubnet04:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 04
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '3'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet04Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet04"
      - Key: kubernetes.io/role/elb
        Value: 1

  PublicSubnet05:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 05
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '4'
        - Fn::GetAZs:
             Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet05Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet05"
      - Key: kubernetes.io/role/elb
        Value: 1

  PublicSubnet06:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 06
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
        - '5'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PublicSubnet06Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PublicSubnet06"
      - Key: kubernetes.io/role/elb
        Value: 1

  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 01
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet01Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet01"
      - Key: kubernetes.io/role/internal-elb
        Value: 1

  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 02
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet02Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet02"
      - Key: kubernetes.io/role/internal-elb
        Value: 1

  PrivateSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 03
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '2'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet03Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet03"
      - Key: kubernetes.io/role/internal-elb
        Value: 1

  PrivateSubnet04:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 04
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '3'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet04Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet04"
      - Key: kubernetes.io/role/internal-elb
        Value: 1

  PrivateSubnet05:
   Type: AWS::EC2::Subnet
   Metadata:
     Comment: Private Subnet 05
   Properties:
     AvailabilityZone:
       Fn::Select:
       - '4'
       - Fn::GetAZs:
           Ref: AWS::Region
     CidrBlock:
       Ref: PrivateSubnet05Block
     VpcId:
       Ref: VPC
     Tags:
     - Key: Name
       Value: !Sub "${NamePrefix}-PrivateSubnet05"
     - Key: kubernetes.io/role/internal-elb
       Value: 1

  PrivateSubnet06:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 06
    Properties:
      AvailabilityZone:
        Fn::Select:
        - '5'
        - Fn::GetAZs:
            Ref: AWS::Region
      CidrBlock:
        Ref: PrivateSubnet06Block
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${NamePrefix}-PrivateSubnet06"
      - Key: kubernetes.io/role/internal-elb
        Value: 1

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet03
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet04RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet04
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet05RouteTableAssociation:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     SubnetId: !Ref PublicSubnet05
     RouteTableId: !Ref PublicRouteTable

  PublicSubnet06RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet06
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01

  PrivateSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable02

  PrivateSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet03
      RouteTableId: !Ref PrivateRouteTable03

  PrivateSubnet04RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet04
      RouteTableId: !Ref PrivateRouteTable04

  PrivateSubnet05RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet05
      RouteTableId: !Ref PrivateRouteTable05

  PrivateSubnet06RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet06
      RouteTableId: !Ref PrivateRouteTable06

  InternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all internal communications
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VpcBlock
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-shared-node"

  InternalSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref InternalSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt InternalSecurityGroup.GroupId

  ExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow external ssh for public access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0                  
      Tags:
        - Key: Name
          Value: !Sub "${NamePrefix}-external"

  ExternalSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
        GroupId: !Ref ExternalSecurityGroup
        IpProtocol: -1
        FromPort: -1
        ToPort: -1
        SourceSecurityGroupId: !GetAtt ExternalSecurityGroup.GroupId

Outputs:
  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    
  InternalSecurityGroup:
    Description: Security group for the cluster control plane communication with worker nodes
    Value: !Join [ ",", [ !Ref InternalSecurityGroup ] ]

  ExternalSecurityGroup:
    Description: Security group for the Shared Nodes
    Value: !Join [ ",", [ !Ref ExternalSecurityGroup ] ]

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet01

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet02

  PublicSubnet3:
    Description: A reference to the public subnet in the 3rd Availability Zone
    Value: !Ref PublicSubnet03

  PublicSubnet4:
    Description: A reference to the public subnet in the 4th Availability Zone
    Value: !Ref PublicSubnet04

  PublicSubnet5:
    Description: A reference to the public subnet in the 5th Availability Zone
    Value: !Ref PublicSubnet05

  PublicSubnet6:
    Description: A reference to the public subnet in the 6th Availability Zone
    Value: !Ref PublicSubnet06

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet01

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet02

  PrivateSubnet3:
    Description: A reference to the private subnet in the 3rd Availability Zone
    Value: !Ref PrivateSubnet03 

  PrivateSubnet4:
    Description: A reference to the private subnet in the 4th Availability Zone
    Value: !Ref PrivateSubnet04

  PrivateSubnet5:
    Description: A reference to the private subnet in the 5th Availability Zone
    Value: !Ref PrivateSubnet05

  PrivateSubnet6:
    Description: A reference to the private subnet in the 6th Availability Zone
    Value: !Ref PrivateSubnet06

  NatGateway01:
    Description: A reference to the Nat Gateway in the 1st Availability Zone
    Value: !Ref NatGateway01

  NatGateway02:
    Description: A reference to the Nat Gateway in the 2nd Availability Zone
    Value: !Ref NatGateway02

  NatGateway03:
    Description: A reference to the Nat Gateway in the 3rd Availability Zone
    Value: !Ref NatGateway03

  NatGateway04:
    Description: A reference to the Nat Gateway in the 4th Availability Zone
    Value: !Ref NatGateway04

  NatGateway05:
    Description: A reference to the Nat Gateway in the 5th Availability Zone
    Value: !Ref NatGateway05

  NatGateway06:
    Description: A reference to the Nat Gateway in the 6th Availability Zone
    Value: !Ref NatGateway06
